Add LogsDB Configure custom HTTP Logger for writing access log into Mongo

--- a/.env-dist
+++ b/.env-dist
@@ -263,3 +263,13 @@ DF_INSTALL=GitHub
 #DF_MANAGED_LOG_FILE_NAME=
 #DF_LIMITS_CACHE_STORE=dfe-limits
 #DF_LIMITS_CACHE_PATH=/tmp/.df-cache/.limits
+
+##------------------------------------------------------------------------------
+## LogsDB settings
+##------------------------------------------------------------------------------
+
+#LOGSDB_HOST=
+#LOGSDB_PORT=
+#LOGSDB_DATABASE=
+#LOGSDB_USERNAME=
+#LOGSDB_PASSWORD=
