--- a/composer.json
+++ b/composer.json
@@ -51,34 +51,35 @@
       }
   ],
   "require":           {
-    "dreamfactory/df-admin-app":       "dev-3.0-beta#c709bcf3df56ccc487f6f2781b38526701def94e",
-    "dreamfactory/df-api-docs-ui":     "dev-3.0-beta#873ae7e55396a1149e626061bca339465670c788",
-    "dreamfactory/df-apidoc":          "~0.6.1",
-    "dreamfactory/df-aws":             "~0.15.1",
-    "dreamfactory/df-azure":           "~0.15.1",
-    "dreamfactory/df-cache":           "~0.11.0",
-    "dreamfactory/df-cassandra":       "~0.12.2",
-    "dreamfactory/df-core":            "~0.14.2",
-    "dreamfactory/df-couchbase":       "~0.10.1",
-    "dreamfactory/df-couchdb":         "~0.15.1",
-    "dreamfactory/df-email":           "~0.8.0",
-    "dreamfactory/df-file":            "~0.6.2",
+    "dreamfactory/df-admin-app": "dev-3.0-beta#c709bcf3df56ccc487f6f2781b38526701def94e",
+    "dreamfactory/df-api-docs-ui": "dev-3.0-beta#873ae7e55396a1149e626061bca339465670c788",
+    "dreamfactory/df-apidoc": "~0.6.1",
+    "dreamfactory/df-aws": "~0.15.1",
+    "dreamfactory/df-azure": "~0.15.1",
+    "dreamfactory/df-cache": "~0.11.0",
+    "dreamfactory/df-cassandra": "~0.12.2",
+    "dreamfactory/df-core": "~0.14.2",
+    "dreamfactory/df-couchbase": "~0.10.1",
+    "dreamfactory/df-couchdb": "~0.15.1",
+    "dreamfactory/df-email": "~0.8.0",
+    "dreamfactory/df-file": "~0.6.2",
     "dreamfactory/df-filemanager-app": "~0.3.0",
-    "dreamfactory/df-firebird":        "~0.7.1",
-    "dreamfactory/df-graphql":         "~0.1.0",
-    "dreamfactory/df-git":             "dev-3.0-beta#c40c898f3c437f5203999de32669a21e5bd13064",
-    "dreamfactory/df-mongodb":         "~0.15.1",
-    "dreamfactory/df-oauth":           "~0.14.0",
-    "dreamfactory/df-rackspace":       "~0.14.1",
-    "dreamfactory/df-rws":             "~0.14.1",
-    "dreamfactory/df-script":          "dev-3.0-beta#09f1c3838dcca14eff8e706f576c27aa44bd4836",
-    "dreamfactory/df-sqldb":           "~0.15.2",
-    "dreamfactory/df-system":          "~0.1.0",
-    "dreamfactory/df-user":            "~0.14.0",
-    "predis/predis":                   "~1.0",
-    "fideloper/proxy":                 "~3.3",
-    "laravel/framework":               "5.5.*",
-    "laravel/tinker":                  "~1.0"
+    "dreamfactory/df-firebird": "~0.7.1",
+    "dreamfactory/df-git": "dev-3.0-beta#c40c898f3c437f5203999de32669a21e5bd13064",
+    "dreamfactory/df-graphql": "~0.1.0",
+    "dreamfactory/df-mongodb": "~0.15.1",
+    "dreamfactory/df-oauth": "~0.14.0",
+    "dreamfactory/df-rackspace": "~0.14.1",
+    "dreamfactory/df-rws": "~0.14.1",
+    "dreamfactory/df-script": "dev-3.0-beta#09f1c3838dcca14eff8e706f576c27aa44bd4836",
+    "dreamfactory/df-sqldb": "~0.15.2",
+    "dreamfactory/df-system": "~0.1.0",
+    "dreamfactory/df-user": "~0.14.0",
+    "fideloper/proxy": "~3.3",
+    "laravel/framework": "5.5.*",
+    "laravel/tinker": "~1.0",
+    "predis/predis": "~1.0",
+    "spatie/laravel-http-logger": "^1.1"
   },
   "require-dev":       {
     "barryvdh/laravel-ide-helper": "~2.1",
@@ -93,7 +94,8 @@
   "autoload":          {
     "classmap": [
       "database/seeds",
-      "database/factories"
+      "database/factories",
+      "utility"
     ],
     "psr-4":    {
       "DreamFactory\\": "app/"
